--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -25,6 +25,7 @@
     text-decoration: underline;
     font-size: 3.2em;
     font-weight: 300;
+    text-align: center;
   }
 }
 
